Fixed refresh bug

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -18,6 +18,8 @@
         }
 
         const BITMAP = '#{graph.getEncodedGraph()}';
+
+        let points = [];
     </script>
     <h:outputScript library="js" name="graph.js" target="body"/>
     <h:outputScript library="js" name="afterAttempt.js" target="body"/>
