--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -29,6 +29,9 @@
     <header>
         <h1><span class="theme">Tsiu</span> T.</h1>
         <h2>P32312 <span class="gray">Web Lab #2 | Вариант: 66637</span></h2>
+        <h:form>
+            <h:commandButton styleClass="button" style="margin-top: 10px" value="Home" action="#{pageNavigation.goToIndex()}"/>
+        </h:form>
     </header>
     <div class="main">
         <div class="panel" style="text-align: center;">
